# CW

./: main.c  task1.ipynb  task2.ipynb  считывание.txt
1/: lisp_list1.cpp
2/: l_mod1.cpp
AISD_LB1/: CMakeLists.txt  algo.cpp  algo.h  inputoutput.cpp  inputoutput.h  main.cpp
AISD_LB2/: CMakeLists.txt  InOut.cpp  InOut.h  lisp.cpp  lisp.h  main.cpp  structs.h
CWww/: Makefile  free.c  free.h  main  main.c  read_text.c  read_text.h  struct.h  task_1.c  task_1.h  task_2.c  task_2.h  task_3_4.c  task_3_4.h
OOP/: CMakeLists.txt  main.cpp
OOP/1/: CMakeLists.txt  Cell.cpp  Cell.h  Field.cpp  Field.h  main.cpp
OOP/1 fix/: Cell.cpp  Cell.h  Field.cpp  Field.h  main.cpp
OOP/2/: CMakeLists.txt  Cell.cpp  Cell.h  Controller.cpp  Controller.h  Field.cpp  Field.h  Object.cpp  Object.h  Player.cpp  Player.h  View.cpp  View.h  main.cpp
OOP/Controller/: Controller.cpp  Controller.h
OOP/Model/: Cell.cpp  Cell.h  Field.cpp  Field.h  Object.cpp  Object.h  Player.cpp  Player.h  Point.h
OOP/Model/Loggers/: ConsolLogger.cpp  ConsolLogger.h  FileLogger.cpp  FileLogger.h  ObjectPublisher.h  Publisher.h  logger.h
OOP/Model/Objects/: BombObject.cpp  BombObject.h  CoinObject.cpp  CoinObject.h  EntranceObject.cpp  EntranceObject.h  ExitObject.cpp  ExitObject.h  TeleportObject.cpp  TeleportObject.h
OOP/View/: View.cpp  View.h
aisd_cw/: aisd_cw.pro  inout.cpp  inout.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myview.cpp  myview.h  node.cpp  node.h  tree.cpp  tree.h
aisd_lb3/: CMakeLists.txt  InOut.cpp  InOut.h  Makefile  Node.cpp  Node.h  Tree.cpp  Tree.h  main.cpp  (+1 more)
(+111 files in other folders)
